# MiniML

./: CMakeLists.txt  MiniML.cpp
dataset_creation/output_files/: games.json  games_machine.json
dataset_creation/test_files/: lichess_german11_2024-02-06.pgn  lichess_pgn_2024.01.07_BFG9k_vs_mamalak.BvL2wiKy.pgn  test_evals_500.pgn
dataset_creation/tools/: display_bitboard_and_evaluation.py  export_as_json_board_count.py  export_as_json_board_count_random.py  export_as_json_human_readable.py  export_as_json_machine_format.py
include/: MiniML.hpp
src/: MLgine.cpp  MiniML.cpp  MiniML.hpp
src/Headers/: Network.hpp
src/Impl/: Network.cpp
test_files/: lichess_pgn_2012.12.31_BFG9k_vs_mamalak.j1dkb5dw.pgn
tools/: Display_ascii_board.py  Display_bitboard.py  Display_bitboard_and_evaluation.py
